--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 		<!-- you write this -->
 		<script src="world.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	</head>
 
 	<body>
