--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 		<link href="world.css" type="text/css" rel="stylesheet" />
 
 		<!-- you write this -->
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="world.js" type="text/javascript"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	</head>
 
 	<body>
