--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>World Database Lookup</title>
 
 		<!-- you can modify this as needed or to your preference -->
-		<link href="world.css" type="text/css" rel="stylesheet" />
+		<link href="world.css" type="text/css" rel="stylesheet">
 
 		<!-- you write this -->
 		
@@ -22,7 +22,8 @@
 			<div id="controls">
 				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
+				<button id="lookup" class="float1">Lookup Country</button>
+				<button id="lookup1" class="float2">Lookup Cities</button>
 			</div>
 			
 			<div id="result">
